--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: #f5f7fa;
 }
 
@@ -85,7 +85,7 @@ body {
 }
 
 .my-project-text {
- margin: 0;
+  margin: 0;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -195,7 +195,7 @@ body {
 }
 
 /* Sidebar section */
-.my-photo{
+.my-photo {
   display: block;
   width: 100%;
   height: 500px;
@@ -204,7 +204,7 @@ body {
   background-color: #1e2939;
   width: 370px;
   padding: 40px 0;
-  height: 1319px;
+  height: 1420px;
   color: white;
 }
 
@@ -241,10 +241,9 @@ body {
   line-height: 24px;
 }
 .contacts-section-link:hover,
-.contacts-section-link :focus{
-  color:#fb6d3a ;
+.contacts-section-link :focus {
+  color: #fb6d3a;
 }
-
 
 /* Tech-Soft-skills-section */
 
